fix free floating image alignment

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -277,6 +277,21 @@ article.copy p img {
   height: auto;
   display: block;
   margin: 32px auto; }
+  article.copy img.aligncenter,
+  article.copy > img.aligncenter,
+  article.copy p img.aligncenter {
+    margin-left: auto;
+    margin-right: auto; }
+  article.copy img.alignright,
+  article.copy > img.alignright,
+  article.copy p img.alignright {
+    margin-left: auto; }
+  article.copy img, article.copy img.alignright,
+  article.copy > img,
+  article.copy > img.alignright,
+  article.copy p img,
+  article.copy p img.alignright {
+    margin-right: auto; }
 
 article.copy blockquote {
   margin: 32px 0;
